JVM crash with JDK8 (build 1.8.0-b132) with G1 GC

XMLWordPrintable

    • gc
    • b03

        This crash happens due to a race condition when remembered set scanning wants to update the BOT of the last card in the retained old gc alloc region, and allocation threads allocating into that card at the same time.

        The fix is to make sure that the last card that has been allocated into has been completely filled by a dummy object. This avoids the race condition.

              Assignee:
              Poonam Bajaj Parhar
              Reporter:
              Abhijit Saha
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: