8044406: JVM crash with JDK8 (build 1.8.0-b132) with G1 GC

Fill the last card that has been allocated into with a dummy object

Reviewed-by: tschatzl, mgerdin